# Game-Engine

./: .gitignore  1q  CMakeLists.txt  README.md  WIKI.md  build.sh  run.sh  wiki.md  ù
core/misc/: animation.cpp  colors.cpp  error.cpp  events.cpp  fps.cpp  interpolation.cpp  log.cpp  mouse.cpp  split.cpp
core/misc/include/: colors.h  error.hpp  events.h  fps.h  interpolation.hpp  log.hpp  mouse.h  split.hpp
core/ui/: font_paths.cpp  image.cpp  renderer.cpp  text.cpp  window.cpp
core/ui/include/: font_paths.hpp  image.h  renderer.h  text.h  window.h
platform/linux/: game.cpp  vars.hpp
src/2d/: button.cpp  image.cpp  spritesheet.cpp  vector2d.cpp
src/2d/include/: button.h  image.h  spritesheet.h  vector2d.hpp
src/3d/: vector3d.cpp
src/3d/include/: vector3d.hpp
src/misc/: gameobj.cpp  resources.cpp  rigidbody.cpp
src/misc/include/: gameobj.h  resources.h  rigidbody.h
